--- a/databaseComidas/src/main/resources/application.properties
+++ b/databaseComidas/src/main/resources/application.properties
@@ -9,3 +9,12 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database=h2
+
+
+# CONFIGURACION DE CORS
+cors.allowed.origins=*
+cors.allowed.methods=GET,POST,OPTIONS,PUT,DELETE
+cors.allow.credentials=true
+cors.allowed.headers=Authorization,Accept,Accept-Encoding,Accept-Language,Access-Control-Request-Headers,Connection,Content-Length,Content-Type,Cookie,Host,Origin,Referer,Access-Control-Request-Method,User-Agent
+cors.exposed.headers=authorization
+cors.maxage=3600
